k8s/admin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
  namespace: e-commerce-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-panel
  template:
    metadata:
      labels:
        app: admin-panel
    spec:
      containers:
      - name: admin-panel
        image: aniketsaini777/admin-panel:latest
        ports:
        - containerPort: 80
