k8s/backend_deployment_applied.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "14"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"e-commerce-web"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"JWT_SECRET","valueFrom":{"configMapKeyRef":{"key":"JWT_SECRET","name":"backend-config"}}},{"name":"MONGODB_URI","valueFrom":{"configMapKeyRef":{"key":"MONGODB_URI","name":"backend-config"}}},{"name":"STRIPE_SECRET_KEY [...]
  creationTimestamp: "2025-07-25T06:59:06Z"
  generation: 14
  name: backend
  namespace: e-commerce-web
  resourceVersion: "7391"
  uid: 836f8d7f-ea1f-42c0-a7bc-e45a04fd035f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-07-25T08:54:45Z"
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: JWT_SECRET
          valueFrom:
            configMapKeyRef:
              key: JWT_SECRET
              name: backend-config
        - name: MONGODB_URI
          valueFrom:
            configMapKeyRef:
              key: MONGODB_URI
              name: backend-config
        - name: STRIPE_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: STRIPE_SECRET_KEY
              name: backend-secret
        image: aniketsaini777/backend:latest
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 4000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-07-25T08:41:51Z"
    lastUpdateTime: "2025-07-25T08:41:51Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-07-25T06:59:07Z"
    lastUpdateTime: "2025-07-25T08:54:45Z"
    message: ReplicaSet "backend-69bc9c5987" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 14
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 1
