k8s/admin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
  namespace: e-commerce-web
spec:
  selector:
    app: admin-panel
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
  type: NodePort
