k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: e-commerce-web
spec:
  selector:
    app: backend
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
