k8s/mango_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: e-commerce-web
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
